Test/WpfTestApp/Features/Error/Faulty.xaml.cs
namespace WpfTestApp.Features.Error
{
    using Miruken.Mvc.Wpf;

    public partial class Faulty : View
    {
        public Faulty()
        {
            InitializeComponent();
        }
    }
}
